# nostr-agent

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  OPEN_SOURCE_READY.md  Pipfile  QUICKSTART.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
config/: agent.yaml
config/prompts/: system_prompt.txt
scripts/: install.sh  start.sh  test_connection.py
src/: __init__.py  agent.py  circuit_breaker.py  command_handler.py  config_manager.py  constants.py  content_deduplicator.py  input_sanitizer.py  llm_provider.py  main.py  nostr_client.py  posting_loop.py  rate_limiter.py
tests/: __init__.py  test_agent_integration.py  test_command_handler.py  test_config.py  test_end_to_end.py  test_llm_provider.py  test_nostr_client.py  test_posting_loop.py  test_validation.py
